--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/babel__generator": "^7.6.4",
